# JCalipr

./: .gitignore  README.md  pyproject.toml
cvat/: cvat_labels_frontal.json  cvat_labels_lateral.json
data/: README.md  fishphenokey_request.md
data/cornell_raw/: specimen_map.csv
data/fish_vista/: metadata.csv
data/idigbio/: metadata.csv
data/validation/: auto_calibration_audit.csv  auto_calibration_audit.md  pool_triage.csv
docs/: CVAT_LABELING_GUIDE.txt
examples/: sample_sidecar.json
scripts/: audit_auto_calibration.py  cvat_to_sidecar.py  export_cvat_config.py  filter_fish_vista.py  harvest_idigbio.py  morfishj_validation.py  preprocess_cornell.py  run_pipeline.sh
src/fish_morpho/: __init__.py  export.py  landmark_config.py  measurement_engine.py  pipeline.py  ruler_calibration.py
tests/: test_cvat_to_sidecar.py  test_export.py  test_landmark_config.py  test_measurement_engine.py  test_pipeline.py  test_ruler_calibration.py
